# payments-monitor

./: .gitignore  Makefile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  nginx.conf  pyproject.toml  scape.py
.envs/: .db_template  .django_template
.github/workflows/: cd.yml
invoice-data-extractor/: invoice-data-extractor.py  invoice_data_extractor.py  mockup_generate_jobs_do_not_use.py  pyproject.toml
letsencrypt/: README.md
payment-monitor-backend/: .gitignore  README.md  requirements.pip
payment-monitor-backend/dockerfiles/: Beat  Celery  Django  Nginx
payment-monitor-backend/monitor-backend/: db.sqlite3
payment-monitor-backend/monitor-backend/api/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
payment-monitor-backend/monitor-backend/api/migrations/: 0001_initial.py  0002_auto_20220317_1726.py  0002_auto_20220325_0031.py  0002_auto_20220329_1859.py  0003_auto_20220317_1740.py  0003_auto_20220406_1307.py  0004_auto_20220320_1310.py  0004_auto_20220406_1421.py  (+9 more)
payment-monitor-backend/monitor-backend/authentication/: forms.py  jwt.py  serializers.py  urls.py  views.py
payment-monitor-backend/monitor-backend/core/: celery.py  settings.py  urls.py
payment-monitor-backend/monitor-backend/dashboard/: urls.py  views.py
payment-monitor-backend/monitor-backend/templates/: dashboard.html
payments-frontend/: package-lock.json  package.json  tailwind.config.js
payments-frontend/components/: Navbar.jsx
payments-frontend/pages/: _app.js  activites.js  index.js  invoices.js  payments.js  projects.js  provider.js
(+7 files in other folders)
