[tool.poetry]
name = "payments-monitor"
version = "0.1.0"
description = ""
authors = ["scx1332 <sieciech.czajka@golem.network>"]

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^5.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
