[tool.poetry]
name = "invoice-data-extractor"
version = "0.1.0"
description = ""
authors = ["scx1332 <sieciech.czajka@golem.network>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.32"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
